# SimpleTimeTable

./: CMakeLists.txt  Professor.cpp  Professor.h  Professor_testy.cpp  Schedule.cpp  Schedule.h  Schedule_testy.cpp  Student.cpp  Student.h  StudentEnrollSubjects.txt  Student_testy.cpp  StudyProgram.cpp  StudyProgram.h  StudyProgram_testy.cpp  Subject.cpp  Subject.h  Subject_testy.cpp  main.cpp
